--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio Website - Veepanshu Kasana</title>
-    <link rel="stylesheet" href="Portfolio_Website.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="./Images/userAsset/Favicon.ico">
 </head>
 <body>
