--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 
     
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js" crossorigin="anonymous"></script>
     <script>
       var typeData = new Typed(".role", {
         strings: [
